[package]
name = "avg"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "avg"
path = "src/main.rs"

[dependencies]
winit = "0.29"
softbuffer = "0.4"
tiny-skia = "0.11"
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vigem-client = "0.1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]}

[profile.release]
opt-level = 3
lto = true
strip = true
